@@ -7,32 +7,36 @@
 \alias{get_component_horizon_data_from_NASIS_db}
 \alias{getHzErrorsNASIS}
 
-\title{Fetch commonly used site/horizon data from a PedonPC database.}
-\description{Fetch commonly used site/horizon data from a PedonPC or local NASIS database, return as a SoilProfileCollection object.}
+\title{Fetch commonly used site/pedon/horizon data from a PedonPC database.}
+\description{Fetch commonly used site/pedon/horizon data from a PedonPC or local NASIS database, return as a SoilProfileCollection object.}
 
 \usage{
-fetchNASIS(rmHzErrors = TRUE, nullFragsAreZero=FALSE)
+fetchNASIS(rmHzErrors = TRUE, nullFragsAreZero=TRUE)
 fetchNASIS_component_data()
 getHzErrorsNASIS(strict=TRUE)
 }
 
 \arguments{
-  \item{rmHzErrors}{should pedons with horizonation errors be removed from the results? (TRUE)}
-  \item{nullFragsAreZero}{should fragment volumes of NULL be interpreted as 0? (FALSE)}
+  \item{rmHzErrors}{should pedons with horizonation errors be removed from the results? (default: TRUE)}
+  \item{nullFragsAreZero}{should fragment volumes of NULL be interpreted as 0? (default: TRUE), see details}
   \item{strict}{should horizonation by strictly enforced? (TRUE)}
 }
 
-\details{This function currently works only on Windows, and requires a 'nasis_local' ODBC connection.}
 \value{a SoilProfileCollection class object}
 \author{D. E. Beaudette and J. M. Skovlin}
-\note{This fuction attempts to do most of the boilerplate work when extracting site/horizon data from a local NASIS database. Pedons that have errors in their horizonation are excluded from the returned object, however, their IDs are printed on the console. See \code{\link{getHzErrorsNASIS}} for a simple approach to identifying pedons with problematic horizonation.}
 
-\seealso{\code{\link{get_hz_data_from_pedon_db}}}
+\details{The value of \code{nullFragsAreZero} will have a significant impact on the rock fragment fractions returned by \code{fetchNASIS}. Set \code{nullFragsAreZero = FALSE} in those cases where there are many data-gaps and NULL rock fragment values should be interpretated as NULLs. Set \code{nullFragsAreZero = TRUE} in those cases where NULL rock fragment values should be interpreted as 0.
+
+This function attempts to do most of the boilerplate work when extracting site/pedon/horizon data from a local NASIS database. Pedons that are missing horizon data, or have errors in their horizonation are excluded from the returned object, however, their IDs are printed on the console. Pedons with combination horizons (e.g. B/C) are erroneously marked as errors due to the way in which they are stored in NASIS as two overlapping horizon records.
+
+See \code{\link{getHzErrorsNASIS}} for a simple approach to identifying pedons with problematic horizonation.}
+
+\note{This function currently works only on Windows, and requires a 'nasis_local' ODBC connection.}
+
 \examples{
 \dontrun{
 # query depends on some pedon data, queried against the national database
 # note that you must setup this connection ahead of time
-# see inst/doc/setup_ODBC_local_NASIS.pdf
 f <- fetchNASIS()
 
 # plot only those profiles with densic contact
@@ -43,7 +47,6 @@ plot(f[which(f$densic.contact), ], name='hzname')
 fc <- fetchNASIS_component_data()
 }
 }
-% Add one or more standard keywords, see file 'KEYWORDS' in the
-% R documentation directory.
+
 \keyword{manip}
 
